# llm-wiki-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
knowledge-base/: index.md  log.md  overview.md
knowledge-base/.obsidian/: workspace.json
wiki_agent/: agent.py  config.py  main.py  tracing.py
wiki_agent/prompts/: instructions.py
wiki_agent/tools/: wiki_tools.py
