[project]
name = "llm-wiki-agent"
version = "0.1.0"
description = "LLM Wiki — a personal knowledge base maintained by an AI agent"
requires-python = ">=3.11"
dependencies = [
    "agno[postgres]",
    "anthropic",
    "fastapi>=0.135.3",
    "openai",
    "openinference-instrumentation-agno>=0.1.30",
    "opentelemetry-exporter-otlp-proto-http>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "pgvector",
    "psycopg[binary]",
    "python-dotenv",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.44.0",
]

[project.scripts]
wiki-agent = "wiki_agent.main:main"
